--- a/Home/templates/Home/base.html
+++ b/Home/templates/Home/base.html
@@ -181,7 +181,7 @@
                                                                         <li><a href="#">Workshop</a></li>
                                                                         <li><a href="{% url 'site-indtrip' %}">Industrial
                                                                                 Trips</a></li>
-                                                                        <li><a href="{% url 'site-index' %}">ITM</a>
+                                                                        <li><a href="{% url 'site-ITM' %}">ITM</a>
                                                                         </li>
                                                                     </ul>
                                                                 </li>
